force-app/main/default/objects/Account/fields/Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician this customer asks for by name. Commercially significant for strata customers and a tie-breaker for the Phase 9 assignment logic.</description>
    <label>Preferred Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Preferred By Accounts</relationshipLabel>
    <relationshipName>Preferred_By_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>