force-app/main/default/objects/Account/fields/Site_Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Notes__c</fullName>
    <description>Standing access instructions - gate codes, dog on site, loading dock hours. Held once on the account instead of retyped onto every job.</description>
    <inlineHelpText>Instructions that apply to every visit. Job-specific notes belong on the job.</inlineHelpText>
    <label>Site Access Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>